--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>UTS Komputasi Awan</title>
+<title>Personal profile</title>
+<style>
+    body {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Hunuridho</h1>
+<h2>Hunuridho</h2>
 <p>2211501503</p>
+<p>Mahasiswa Universitas BudiLuhur</p>
 
 </body>
 </html> 
