--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <title>Personal profile</title>
 </head>
+
+<style>
+  body {
+    text-align: center;
+  }
+</style>
 <body>
 
 <h2>Hunuridho</h2>
