--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Personal profile</title>
+  <title>Personal profile</title>
+  <style>
+    h1 {
+      text-align: center;
+    }
+  </style>
 </head>
-
-<style>
-  body {
-    text-align: center;
-  }
-</style>
 <body>
 
-<h2>Hunuridho</h2>
-<p>2211501503</p>
-<p>Mahasiswa Universitas BudiLuhur</p>
-<img src="logoUBL.png">
+  <h1>Komputasi Awan</h1>
+  <h2>Anggota Kelompok :</h2>
+  <p>Husnuridho (2211501503)</p>
+  <p>Mahasiswa Universitas BudiLuhur</p>
+  <img src="logoUBL.png" alt="Logo Universitas BudiLuhur">
 
 </body>
-</html> 
+</html>
