--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Personal profile</title>
+  <title>KomputasiAwan</title>
   <style>
     h1 {
       text-align: center;
